--- a/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -7,8 +7,13 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-sanitize.js"></script>
+    <script src="~/Assets/js/main.js"></script>
+    <script src="~/Scripts/angular-route.min.js"></script>
+
 </head>
-<body>
+<body ng-app="MainApp" ng-controller="AppController">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -20,14 +25,16 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
             </div>
         </div>
     </div>
 
     <div class="container body-content">
-        @RenderBody()
+        <div ng-view>
+            @RenderSection("featured", required: false)
+            @RenderBody()
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
