--- a/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
     <script src="~/Assets/js/ace.min.js"></script>
     <script src="~/Assets/js/ace-elements.min.js"></script>
-    
+
     @Scripts.Render("~/bundles/adminappjs")
 </head>
 <body ng-app="MainApp" ng-controller="AppController" style="margin-top: -54px;">
@@ -83,7 +83,6 @@
                 </div><!--/.container-fluid-->
             </div><!--/.navbar-inner-->
         </div>
-
         <div class="main-container container-fluid">
             <a class="menu-toggler" id="menu-toggler" href="">
                 <span class="menu-text"></span>
@@ -126,7 +125,7 @@
 
                 <ul class="nav nav-list">
                     <li class="active">
-                        <a href="/Home#/">
+                        <a href="/">
                             <i class="icon-dashboard"></i>
                             <span class="menu-text"> Dashboard </span>
                         </a>
@@ -319,6 +318,108 @@
                         </a>
                     </li>
 
+                    <li>
+                        <a href="" class="dropdown-toggle">
+                            <i class="icon-tag"></i>
+                            <span class="menu-text"> More Pages </span>
+
+                            <b class="arrow icon-angle-down"></b>
+                        </a>
+
+                        <ul class="submenu">
+                            <li>
+                                <a href="profile.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    User Profile
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="inbox.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Inbox
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="pricing.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Pricing Tables
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="invoice.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Invoice
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="timeline.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Timeline
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="login.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Login &amp; Register
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="" class="dropdown-toggle">
+                            <i class="icon-file-alt"></i>
+
+                            <span class="menu-text">
+                                Other Pages
+                                <span class="badge badge-primary ">5</span>
+                            </span>
+
+                            <b class="arrow icon-angle-down"></b>
+                        </a>
+
+                        <ul class="submenu">
+                            <li>
+                                <a href="faq.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    FAQ
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="error-404.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Error 404
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="error-500.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Error 500
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="grid.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Grid
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="blank.html">
+                                    <i class="icon-double-angle-right"></i>
+                                    Blank Page
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul><!--/.nav-list-->
 
                 <div class="sidebar-collapse" id="sidebar-collapse">
@@ -329,18 +430,39 @@
                     try { ace.settings.check('sidebar', 'collapsed') } catch (e) { }
                 </script>
             </div>
-        </div>
 
+            <div class="main-content">
+                <div class="breadcrumbs" id="breadcrumbs">
+                    <script type="text/javascript">
+                        try { ace.settings.check('breadcrumbs', 'fixed') } catch (e) { }
+                    </script>
 
-        <div class="container body-content">
-            <div ng-view>
+                    <ul class="breadcrumb">
+                        <li>
+                            <i class="icon-home home-icon"></i>
+                            <a href="/">Home</a>
 
-                @RenderSection("featured", required: false)
-                @RenderBody()
-            </div>
-        </div>
+                            <span class="divider">
+                                <i class="icon-angle-right arrow-icon"></i>
+                            </span>
+                        </li>
+                        <li class="active">Dashboard</li>
+                    </ul><!--.breadcrumb-->
+                </div>
+                    <div class="page-content">
+                        <div class="container body-content">
+                            <div ng-view>
+                                @RenderSection("featured", required: false)
+                                @RenderBody()
+                            </div>
+                        </div><!--/.row-fluid-->
+                    </div><!--/.page-content-->
+
+                </div><!--/.main-content-->
+        </div><!--/.main-container-->
     </div>
-        <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
