--- a/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
     <script src="~/Assets/js/angular-datatables.js"></script>
     <script src="~/Assets/js/jquery.dataTables.js"></script>
 
-    <script src="~/Assets/js/ace.min.js"></script>
-    <script src="~/Assets/js/ace-elements.min.js"></script>
+    @*<script src="~/Assets/js/ace.min.js"></script>*@
+    @*<script src="~/Assets/js/ace-elements.min.js"></script>*@
         @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
     <script src="~/Scripts/bootstrap.min.js"></script>
 
