add report test

--- a/TCSOffice.Presentation.Web/Views/Customer/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Customer/Index.cshtml
@@ -4,8 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-@*<div ng-controller="customersCtrl">
+<h2>Display Data in the Report Viewer</h2>
 
-</div>*@
+@* Here we call the page that I have been created into shared folder *@
+
+@Html.Partial("CompanyReport")
+  
 
