--- a/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
@@ -2,3 +2,130 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<script type="text/javascript">
+     jQuery(function ($) {
+         var oTable1 = $('#sample-table-2').dataTable({
+             "ajax": {
+                 "url": "/home/loaddata",
+                 "type": "GET",
+                 "datatype": "json"
+             },
+             "aoColumns": [
+                 { "bSortable": false },
+                 null, null, null, null, null,
+                 { "bSortable": false }
+             ]
+         });
+
+         $('table th input:checkbox').on('click', function () {
+             var that = this;
+             $(this).closest('table').find('tr > td:first-child input:checkbox')
+                 .each(function () {
+                     this.checked = that.checked;
+                     $(this).closest('tr').toggleClass('selected');
+                 });
+
+         });
+
+     })
+</script>
+
+
+
+<table id="sample-table-2" class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr>
+            <th class="center">
+                <label>
+                    <input type="checkbox" class="ace" />
+                    <span class="lbl"></span>
+                </label>
+            </th>
+            <th>Domain</th>
+            <th>Price</th>
+            <th class="hidden-480">Clicks</th>
+
+            <th class="hidden-phone">
+                <i class="icon-time bigger-110 hidden-phone"></i>
+                Update
+            </th>
+            <th class="hidden-480">Status</th>
+
+            <th></th>
+        </tr>
+    </thead>
+
+    <tbody>
+        
+        <tr>
+            <td class="center">
+                <label>
+                    <input type="checkbox" class="ace" />
+                    <span class="lbl"></span>
+                </label>
+            </td>
+
+            <td>
+                <a href="#">once.com</a>
+            </td>
+            <td>$20</td>
+            <td class="hidden-480">1,400</td>
+            <td class="hidden-phone">Apr 04</td>
+
+            <td class="hidden-480">
+                <span class="label label-info arrowed arrowed-righ">Sold</span>
+            </td>
+
+            <td>
+                <div class="hidden-phone visible-desktop action-buttons">
+                    <a class="blue" href="#">
+                        <i class="icon-zoom-in bigger-130"></i>
+                    </a>
+
+                    <a class="green" href="#">
+                        <i class="icon-pencil bigger-130"></i>
+                    </a>
+
+                    <a class="red" href="#">
+                        <i class="icon-trash bigger-130"></i>
+                    </a>
+                </div>
+
+                <div class="hidden-desktop visible-phone">
+                    <div class="inline position-relative">
+                        <button class="btn btn-minier btn-yellow dropdown-toggle" data-toggle="dropdown">
+                            <i class="icon-caret-down icon-only bigger-120"></i>
+                        </button>
+
+                        <ul class="dropdown-menu dropdown-icon-only dropdown-yellow pull-right dropdown-caret dropdown-close">
+                            <li>
+                                <a href="#" class="tooltip-info" data-rel="tooltip" title="View">
+                                    <span class="blue">
+                                        <i class="icon-zoom-in bigger-120"></i>
+                                    </span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="tooltip-success" data-rel="tooltip" title="Edit">
+                                    <span class="green">
+                                        <i class="icon-edit bigger-120"></i>
+                                    </span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="tooltip-error" data-rel="tooltip" title="Delete">
+                                    <span class="red">
+                                        <i class="icon-trash bigger-120"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+</table>
