--- a/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
@@ -10,29 +10,16 @@
 <table id="sample-table-2" class="table table-striped table-bordered table-hover">
     <thead>
         <tr>
-            <th class="center">
-                <label>
-                    <input type="checkbox" class="ace" />
-                    <span class="lbl"></span>
-                </label>
-            </th>
-            <th>Domain</th>
-            <th>Price</th>
-            <th class="hidden-480">Clicks</th>
-
-            <th class="hidden-phone">
-                <i class="icon-time bigger-110 hidden-phone"></i>
-                Update
-            </th>
-            <th class="hidden-480">Status</th>
-
-            <th></th>
+            <th>Company Name</th>
+            <th class="center">Email</th>
+            <th class="center">Address</th>
+            <th class="center">Phone</th>
         </tr>
     </thead>
 
     <tbody>
         
-        <tr>
+        @*<tr>
             <td class="center">
                 <label>
                     <input type="checkbox" class="ace" />
@@ -100,6 +87,6 @@
                     </div>
                 </div>
             </td>
-        </tr>
+        </tr>*@
     </tbody>
 </table>
