--- a/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Home/Index.cshtml
@@ -1,92 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home";
+    ViewBag.Title = "WelCome";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="row">
 
-
-
-
-<table id="sample-table-2" class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Company Name</th>
-            <th class="center">Email</th>
-            <th class="center">Address</th>
-            <th class="center">Phone</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        
-        @*<tr>
-            <td class="center">
-                <label>
-                    <input type="checkbox" class="ace" />
-                    <span class="lbl"></span>
-                </label>
-            </td>
-
-            <td>
-                <a href="#">once.com</a>
-            </td>
-            <td>$20</td>
-            <td class="hidden-480">1,400</td>
-            <td class="hidden-phone">Apr 04</td>
-
-            <td class="hidden-480">
-                <span class="label label-info arrowed arrowed-righ">Sold</span>
-            </td>
-
-            <td>
-                <div class="hidden-phone visible-desktop action-buttons">
-                    <a class="blue" href="#">
-                        <i class="icon-zoom-in bigger-130"></i>
-                    </a>
-
-                    <a class="green" href="#">
-                        <i class="icon-pencil bigger-130"></i>
-                    </a>
-
-                    <a class="red" href="#">
-                        <i class="icon-trash bigger-130"></i>
-                    </a>
-                </div>
-
-                <div class="hidden-desktop visible-phone">
-                    <div class="inline position-relative">
-                        <button class="btn btn-minier btn-yellow dropdown-toggle" data-toggle="dropdown">
-                            <i class="icon-caret-down icon-only bigger-120"></i>
-                        </button>
-
-                        <ul class="dropdown-menu dropdown-icon-only dropdown-yellow pull-right dropdown-caret dropdown-close">
-                            <li>
-                                <a href="#" class="tooltip-info" data-rel="tooltip" title="View">
-                                    <span class="blue">
-                                        <i class="icon-zoom-in bigger-120"></i>
-                                    </span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#" class="tooltip-success" data-rel="tooltip" title="Edit">
-                                    <span class="green">
-                                        <i class="icon-edit bigger-120"></i>
-                                    </span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#" class="tooltip-error" data-rel="tooltip" title="Delete">
-                                    <span class="red">
-                                        <i class="icon-trash bigger-120"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </td>
-        </tr>*@
-    </tbody>
-</table>
+<div><h2>WelCome</h2></div>
+</div>
