--- a/TCSOffice.Presentation.Web/Views/Company/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Company/Index.cshtml
@@ -3,6 +3,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["Error"]
+    </div>
+}
+@Html.ActionLink("Preview and Print", "PreviewCompanies", "Company",null, new { @id = "btnPreviewPrint", @class= "btn btn-primary" })
+
 <table id="sample-table-2" class="table table-striped table-bordered table-hover">
     <thead>
         <tr>
@@ -14,7 +22,5 @@
             <th class="center">Action</th>
         </tr>
     </thead>
-
-    <tbody>
-    </tbody>
+    <tbody></tbody>
 </table>
