--- a/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -478,22 +478,22 @@
                 "bProcessing": false,
                 "aoColumns": [
                     {
-                        "mData": "CompanyName", "sWidth": "100px",
+                        "mData": "CompanyName", "sWidth": "100px"
                     },
                     {
-                        "mData": "Email", "sWidth": "100px",
+                        "mData": "Email", "sWidth": "100px"
                     },
                     {
-                        "mData": "Address", "sWidth": "100px",
+                        "mData": "Address", "sWidth": "100px"
                     },
                     {
-                        "mData": "Phone", "sWidth": "100px",
+                        "mData": "Phone", "sWidth": "100px"
                     },
                     {
-                        "mData": "IsActive", "sWidth": "100px",
+                        "mData": "IsActive", "sWidth": "100px"
                     },
                     {
-                        "mData": "Action",
+                        "mData": "Actions",
                         "bSortable": "false",
                         "sWidth": "100px",
                         "fnRender": function (o) {
@@ -507,7 +507,8 @@
                     { "sClass": "center", "aTargets": [1] },
                     { "sClass": "center", "aTargets": [2] },
                     { "sClass": "center", "aTargets": [3] },
-                    { "sClass": "center", "aTargets": [4] }
+                    { "sClass": "center", "aTargets": [4] },
+                    { "sClass": "center", "aTargets": [5] }
                 ]
 
             });
