--- a/TCSOffice.Presentation.Web/Views/Company/Detail.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Company/Detail.cshtml
@@ -1,28 +1,69 @@
 ﻿@model TCSOffice.Business.Domain.Entity.Company
-
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Detail</h2>
+<script type="text/javascript">
+    function onclick() {
+        alert("tee000");
+        location.href = '@Url.Action("Index","Company")';
+    }
 
-<div>
-    <div class="row-fluid">
-        <div class="form-horizontal">
-            <div class="control-group" style="margin-left: 100px;">
+</script>
+<div class="page-header position-relative">
+    <h2>Company</h2>
+</div>
+<div class="row-fluid">
+    <div class="form-horizontal">
+        <div class="control-group" style="margin-left: 100px;">
+            <div class="col-md-2">
+                <label class="control-label col-md-2" style="font-weight:bold">Name :</label>
+            </div>
+            <div class="col-md-10 controls" style="margin-top: 4px;">
+                @Html.DisplayFor(model => model.CompanyName)
+            </div>
+            <div style="margin-top:15px">
                 <div class="col-md-2">
-                    @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "lbl" }) 
-                    @Html.DisplayFor(model => model.CompanyName)
+                    <label class="control-label col-md-2" style="font-weight:bold">Address :</label>
                 </div>
-                <div class="col-md-10 controls">
-
+                <div class="col-md-10 controls" style="margin-top: 4px;">
+                    @Html.DisplayFor(model => model.Address)
                 </div>
+            </div>
+            <div style="margin-top:15px">
+                <div class="col-md-4">
+                    <label class="control-label col-md-2" style="font-weight:bold">Email :</label>
+                </div>
+                <div class="col-md-10 controls" style="margin-top: 4px;">
+                    @Html.DisplayFor(model => model.Email)
+                </div>
+            </div>
+            <div style="margin-top:15px">
+                <div class="col-md-4">
+                    <label class="control-label col-md-2" style="font-weight:bold">Phone :</label>
+                </div>
+                <div class="col-md-10 controls" style="margin-top: 4px;">
+                    @Html.DisplayFor(model => model.Phone)
+                </div>
+            </div>
+            <div style="margin-top:15px">
+                <div class="col-md-4">
+                    <label class="control-label col-md-2" style="font-weight:bold">Active :</label>
+                </div>
+                <div class="col-md-10 controls" style="margin-top: 4px;">
+                    @Html.DisplayFor(model => model.IsActive)
+                </div>
+            </div>
 
+            <div style="margin-top:15px">
+                <div class="col-md-10" style="margin-left: 240px;">
+                    <button class="btn btn-danger btn-small" type="button" onclick="location.href='@Url.Action("Index", "Company")'">
+                    <i class="icon-reply icon-only"></i>
+                    Back to List</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<p>
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
