--- a/TCSOffice.Presentation.Web/Views/Company/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Company/Index.cshtml
@@ -25,3 +25,67 @@
     </thead>
     <tbody></tbody>
 </table>
+
+
+
+<script type="text/javascript">
+
+        $(document).ready(function () {
+            var oTable1 = $('#sample-table-2').dataTable({
+                "bServerSide": true,
+                "sAjaxSource": "/company/loaddata",
+                "bProcessing": false,
+                "aoColumns": [
+                    {
+                        "mData": "CompanyName", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Email", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Address", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Phone", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "IsActive", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Actions",
+                        "bSortable": "false",
+                        "sWidth": "100px",
+                        "fnRender": function (o) {
+                            var tags = "<a href='Edit/" + o.aData.Id + "'>Edit</a>&nbsp&nbsp&nbsp<a href='Detail/" + o.aData.Id + "'>Detail</a>&nbsp&nbsp&nbsp<a href='SaveCompanyId/" + o.aData.Id + "'><img src='../Assets/images/Go-Next.png' title='Select' />";
+                            return tags;
+                        }
+                    }
+                ],
+                "aoColumnDefs": [
+                    { "sClass": "center", "aTargets": [0] },
+                    { "sClass": "center", "aTargets": [1] },
+                    { "sClass": "center", "aTargets": [2] },
+                    { "sClass": "center", "aTargets": [3] },
+                    { "sClass": "center", "aTargets": [4] },
+                    { "sClass": "center", "aTargets": [5] }
+                ]
+
+            });
+
+            $('table th input:checkbox').on('click', function () {
+                var that = this;
+                $(this).closest('table').find('tr > td:first-child input:checkbox')
+                    .each(function () {
+                        this.checked = that.checked;
+                        $(this).closest('tr').toggleClass('selected');
+                    });
+
+            });
+
+            $('.date-picker').datepicker().next().on(ace.click_event, function () {
+                $(this).prev().focus();
+            });
+        });
+
+</script>
+
