--- a/TCSOffice.Presentation.Web/Views/Customer/Index.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Customer/Index.cshtml
@@ -8,3 +8,88 @@
 
   
 
+@{
+    ViewBag.Title = "Company";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["Error"]
+    </div>
+}
+@Html.ActionLink("Preview and Print", "PreviewCustomers", "Customer", null, new { @id = "btnCustomerPreviewPrint", @class = "btn btn-primary", @target = "_blank" })
+@Html.ActionLink("Export to excel", "ExportCustomersToExcel", "Customer", null, new { @id = "btnExportCustomersToExcel", @class = "btn btn-primary" })
+
+<table id="customer-table" class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Customer Name</th>
+            <th class="center">Contribution Number</th>
+            <th class="center">Start Credit Period</th>
+            <th class="center">End Credit Period</th>
+            <th class="center">Address</th>
+            <th class="center">Company Name</th>
+            <th class="center">Phone Number</th>
+            <th class="center">DGE Approved</th>
+            <th class="center">Actions</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
+<script type="text/javascript">
+
+        $(document).ready(function () {
+            var oTable1 = $('#customer-table').dataTable({
+                "bServerSide": true,
+                "sAjaxSource": "/customer/loaddata",
+                "bProcessing": false,
+                "aoColumns": [
+                    {
+                        "mData": "CustomerName", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "ContributionNumber", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "StartCreditPeriod", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "EndCreditPeriod", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Address", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "CompanyName", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "PhoneNumber", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "DGEApproved", "sWidth": "100px"
+                    },
+                    {
+                        "mData": "Actions",
+                        "bSortable": "false",
+                        "sWidth": "100px",
+                        "fnRender": function (o) {
+                            var tags = "<a href='Edit/" + o.aData.Id + "'>Edit</a>&nbsp&nbsp&nbsp<a href='Detail/" + o.aData.Id + "'>Detail</a>";
+                            return tags;
+                        }
+                    }
+                ],
+                "aoColumnDefs": [
+                    { "sClass": "center", "aTargets": [0] },
+                    { "sClass": "center", "aTargets": [1] },
+                    { "sClass": "center", "aTargets": [2] },
+                    { "sClass": "center", "aTargets": [3] },
+                    { "sClass": "center", "aTargets": [4] },
+                    { "sClass": "center", "aTargets": [5] }
+                ]
+
+            });
+        });
+</script>
