--- a/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/TCSOffice.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/Assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Assets/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="~/Assets/css/datepicker.css" />
     <link href="~/Assets/css/ace-fonts.css" rel="stylesheet" />
     <link href="~/Assets/css/ace.min.css" rel="stylesheet" />
     <link href="~/Assets/css/ace-responsive.min.css" rel="stylesheet" />
@@ -34,6 +35,7 @@
 
     <script src="~/Assets/js/ace-elements.min.js"></script>
     @*<script src="~/Assets/js/ace.min.js"></script>*@
+    <script src="~/Assets/js/date-time/bootstrap-datepicker.min.js"></script>
 
 </head>
 <body style="margin-top: -54px;">
@@ -468,63 +470,6 @@
             </div><!--/.main-container-->
         </div>
     </div>
-
-
-    <script type="text/javascript">
-
-        $(document).ready(function () {
-            var oTable1 = $('#sample-table-2').dataTable({
-                "bServerSide": true,
-                "sAjaxSource": "/company/loaddata",
-                "bProcessing": false,
-                "aoColumns": [
-                    {
-                        "mData": "CompanyName", "sWidth": "100px"
-                    },
-                    {
-                        "mData": "Email", "sWidth": "100px"
-                    },
-                    {
-                        "mData": "Address", "sWidth": "100px"
-                    },
-                    {
-                        "mData": "Phone", "sWidth": "100px"
-                    },
-                    {
-                        "mData": "IsActive", "sWidth": "100px"
-                    },
-                    {
-                        "mData": "Actions",
-                        "bSortable": "false",
-                        "sWidth": "100px",
-                        "fnRender": function (o) {
-                            var tags = "<a href='Edit/" + o.aData.Id + "'>Edit</a>&nbsp&nbsp&nbsp<a href='Detail/" + o.aData.Id + "'>Detail</a>";
-                            return tags;
-                        }
-                    }
-                ],
-                "aoColumnDefs": [
-                    { "sClass": "center", "aTargets": [0] },
-                    { "sClass": "center", "aTargets": [1] },
-                    { "sClass": "center", "aTargets": [2] },
-                    { "sClass": "center", "aTargets": [3] },
-                    { "sClass": "center", "aTargets": [4] },
-                    { "sClass": "center", "aTargets": [5] }
-                ]
-
-            });
-
-            $('table th input:checkbox').on('click', function () {
-                var that = this;
-                $(this).closest('table').find('tr > td:first-child input:checkbox')
-                    .each(function () {
-                        this.checked = that.checked;
-                        $(this).closest('tr').toggleClass('selected');
-                    });
-
-            });
-        });
-    </script>
 
 </body>
 </html>
